@@ -1,4 +1,10 @@
 function p = hexaplane(r);
+% HEXAPLANE returns pole locations of hexagonal-plane aligned pole  
+%
+% 3DFM Function 
+% magnets/simforces
+% last modified 11/14/08 (krisford)
+
 % hexaplane(r) -- Returns pole locations of hexagonal-plane aligned pole
 % pieces (jcribb)
 
